fix gap in mobiles

--- a/tailwind.css
+++ b/tailwind.css
@@ -750,6 +750,10 @@ video {
   gap: 4rem;
 }
 
+.gap-20 {
+  gap: 5rem;
+}
+
 .self-center {
   align-self: center;
 }
@@ -1112,6 +1116,10 @@ video {
 
   .md\:gap-6 {
     gap: 1.5rem;
+  }
+
+  .md\:gap-40 {
+    gap: 10rem;
   }
 
   .md\:p-3 {
